package modeling.generalization;

public abstract class HomeAppliancies {
    private int serialNo;
    private String manufacturer;
    private int year;

    public abstract void turnOn();
    public abstract void turnOff();

}
